Config Blazor Project

--- a/MicroserviceArchitecture.Blazor/wwwroot/appsettings.json
+++ b/MicroserviceArchitecture.Blazor/wwwroot/appsettings.json
@@ -1,6 +1,14 @@
 {
-  "Local": {
-    "Authority": "https:login.microsoftonline.com/",
-    "ClientId": "33333333-3333-3333-33333333333333333"
+  "oidc": {
+    "Authority": "https://localhost:5000/",
+    "ClientId": "blazor",
+    "DefaultScopes": [
+      "openid",
+      "profile",
+      "email",
+      "gatewayapi"
+    ],
+    "PostLogoutRedirectUri": "/",
+    "ResponseType": "code"
   }
 }
